tests/baselines/reference/privacyGloImport.errors.txt
==== tests/cases/compiler/privacyGloImport.ts (49 errors) ====
    module m1 {
        export module m1_M1_public {
            export class c1 {
            }
            export function f1() {
                return new c1;
            }
            export var v1 = c1;
            export var v2: c1;
        }
    
        module m1_M2_private {
            export class c1 {
            }
            export function f1() {
                return new c1;
            }
            export var v1 = c1;
            export var v2: c1;
        }
    
        declare export module "m1_M3_public" {
                ~~~~~~
!!! error TS1029: 'export' modifier must precede 'declare' modifier.
                              ~~~~~~~~~~~~~~
!!! error TS2195: Ambient external module declaration must be defined in global context.
            export function f1();
            export class c1 {
            }
            export var v1: { new (): c1; };
            export var v2: c1;
        }
    
        declare module "m1_M4_private" {
                       ~~~~~~~~~~~~~~~
!!! error TS2195: Ambient external module declaration must be defined in global context.
            export function f1();
            export class c1 {
            }
            export var v1: { new (): c1; };
            export var v2: c1;
        }
    
        import m1_im1_private = m1_M1_public;
        export var m1_im1_private_v1_public = m1_im1_private.c1;
        export var m1_im1_private_v2_public = new m1_im1_private.c1();
        export var m1_im1_private_v3_public = m1_im1_private.f1;
        export var m1_im1_private_v4_public = m1_im1_private.f1();
        var m1_im1_private_v1_private = m1_im1_private.c1;
        var m1_im1_private_v2_private = new m1_im1_private.c1();
        var m1_im1_private_v3_private = m1_im1_private.f1;
        var m1_im1_private_v4_private = m1_im1_private.f1();
    
    
        import m1_im2_private = m1_M2_private;
        export var m1_im2_private_v1_public = m1_im2_private.c1;
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2027: Exported variable 'm1_im2_private_v1_public' has or is using private type 'm1_M2_private.c1'.
        export var m1_im2_private_v2_public = new m1_im2_private.c1();
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2027: Exported variable 'm1_im2_private_v2_public' has or is using private type 'm1_M2_private.c1'.
        export var m1_im2_private_v3_public = m1_im2_private.f1;
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2027: Exported variable 'm1_im2_private_v3_public' has or is using private type 'm1_M2_private.f1'.
        export var m1_im2_private_v4_public = m1_im2_private.f1();
                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2027: Exported variable 'm1_im2_private_v4_public' has or is using private type 'm1_M2_private.c1'.
        var m1_im2_private_v1_private = m1_im2_private.c1;
        var m1_im2_private_v2_private = new m1_im2_private.c1();
        var m1_im2_private_v3_private = m1_im2_private.f1;
        var m1_im2_private_v4_private = m1_im2_private.f1();
    
        import m1_im3_private = require("m1_M3_public");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2136: Import declarations in an internal module cannot reference an external module.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"m1_M3_public"'.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
        export var m1_im3_private_v1_public = m1_im3_private.c1;
                                              ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im3_private'.
        export var m1_im3_private_v2_public = new m1_im3_private.c1();
                                                  ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im3_private'.
        export var m1_im3_private_v3_public = m1_im3_private.f1;
                                              ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im3_private'.
        export var m1_im3_private_v4_public = m1_im3_private.f1();
                                              ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im3_private'.
        var m1_im3_private_v1_private = m1_im3_private.c1;
                                        ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im3_private'.
        var m1_im3_private_v2_private = new m1_im3_private.c1();
                                            ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im3_private'.
        var m1_im3_private_v3_private = m1_im3_private.f1;
                                        ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im3_private'.
        var m1_im3_private_v4_private = m1_im3_private.f1();
                                        ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im3_private'.
    
        import m1_im4_private = require("m1_M4_private");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2136: Import declarations in an internal module cannot reference an external module.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"m1_M4_private"'.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
        export var m1_im4_private_v1_public = m1_im4_private.c1;
                                              ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im4_private'.
        export var m1_im4_private_v2_public = new m1_im4_private.c1();
                                                  ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im4_private'.
        export var m1_im4_private_v3_public = m1_im4_private.f1;
                                              ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im4_private'.
        export var m1_im4_private_v4_public = m1_im4_private.f1();
                                              ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im4_private'.
        var m1_im4_private_v1_private = m1_im4_private.c1;
                                        ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im4_private'.
        var m1_im4_private_v2_private = new m1_im4_private.c1();
                                            ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im4_private'.
        var m1_im4_private_v3_private = m1_im4_private.f1;
                                        ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im4_private'.
        var m1_im4_private_v4_private = m1_im4_private.f1();
                                        ~~~~~~~~~~~~~~
!!! error TS2095: Could not find symbol 'm1_im4_private'.
    
        // Parse error to export module
        export import m1_im1_public = m1_M1_public;
        export import m1_im2_public = m1_M2_private;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2182: Exported import declaration 'm1_im2_public' is assigned value with type that is using inaccessible module 'm1_M2_private'.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2185: Exported import declaration 'm1_im2_public' is assigned container that is or is using inaccessible module 'm1_M2_private'.
        export import m1_im3_public = require("m1_M3_public");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2136: Import declarations in an internal module cannot reference an external module.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"m1_M3_public"'.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
        export import m1_im4_public = require("m1_M4_private");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2136: Import declarations in an internal module cannot reference an external module.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"m1_M4_private"'.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    }
    
    module glo_M1_public {
        export class c1 {
        }
        export function f1() {
            return new c1;
        }
        export var v1 = c1;
        export var v2: c1;
    }
    
    declare module "glo_M2_public" {
        export function f1();
        export class c1 {
        }
        export var v1: { new (): c1; };
        export var v2: c1;
    }
    
    declare module "use_glo_M1_public" {
        import use_glo_M1_public = glo_M1_public;
        export var use_glo_M1_public_v1_public: { new (): use_glo_M1_public.c1; };
        export var use_glo_M1_public_v2_public: use_glo_M1_public;
                                                ~~~~~~~~~~~~~~~~~
!!! error TS4022: Type reference cannot refer to container '"use_glo_M1_public".use_glo_M1_public'.
        export var use_glo_M1_public_v3_public: ()=> use_glo_M1_public.c1;
        var use_glo_M1_public_v1_private: { new (): use_glo_M1_public.c1; };
        var use_glo_M1_public_v2_private: use_glo_M1_public;
                                          ~~~~~~~~~~~~~~~~~
!!! error TS4022: Type reference cannot refer to container '"use_glo_M1_public".use_glo_M1_public'.
        var use_glo_M1_public_v3_private: () => use_glo_M1_public.c1;
    
        import use_glo_M2_public = require("glo_M2_public");
        export var use_glo_M2_public_v1_public: { new (): use_glo_M2_public.c1; };
        export var use_glo_M2_public_v2_public: use_glo_M2_public;
                                                ~~~~~~~~~~~~~~~~~
!!! error TS4022: Type reference cannot refer to container '"use_glo_M1_public".use_glo_M2_public'.
        export var use_glo_M2_public_v3_public: () => use_glo_M2_public.c1;
        var use_glo_M2_public_v1_private: { new (): use_glo_M2_public.c1; };
        var use_glo_M2_public_v2_private: use_glo_M2_public;
                                          ~~~~~~~~~~~~~~~~~
!!! error TS4022: Type reference cannot refer to container '"use_glo_M1_public".use_glo_M2_public'.
        var use_glo_M2_public_v3_private: () => use_glo_M2_public.c1;
    
        module m2 {
            import errorImport = require("glo_M2_public");
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2136: Import declarations in an internal module cannot reference an external module.
            import nonerrorImport = glo_M1_public;
    
            module m5 {
                import m5_errorImport = require("glo_M2_public");
                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2136: Import declarations in an internal module cannot reference an external module.
                import m5_nonerrorImport = glo_M1_public;
            }
        }
    }
    
    declare module "anotherParseError" {
        module m2 {
            declare module "abc" {
            ~~~~~~~
!!! error TS1038: 'declare' modifier not allowed for code already in an ambient context.
                           ~~~~~
!!! error TS2195: Ambient external module declaration must be defined in global context.
            }
        }
    
        module m2 {
            module "abc2" {
                   ~~~~~~
!!! error TS2195: Ambient external module declaration must be defined in global context.
            }
        }
        module "abc3" {
               ~~~~~~
!!! error TS2195: Ambient external module declaration must be defined in global context.
        }
    }
    
    module m2 {
        import m3 = require("use_glo_M1_public");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2136: Import declarations in an internal module cannot reference an external module.
        module m4 {
            var a = 10;
            import m2 = require("use_glo_M1_public");
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2136: Import declarations in an internal module cannot reference an external module.
        }
    
    }